--- a/css/main.css
+++ b/css/main.css
@@ -183,9 +183,7 @@ header {
     animation-delay: 0.5s;
 }
 
-.flamingo,
-.right-hero-square {
-    width: 250px;
+.computersquare {
     opacity: 0;
     position: absolute;
     margin: auto;
@@ -198,8 +196,7 @@ header {
     animation-delay: 1s;
 }
 
-.right-hero-square {
-    width: 300px;
+.computersquare {
     top: 190px;
     right: -740px;
     animation-delay: 0.5s;
@@ -232,7 +229,7 @@ header {
 }
 
 @media(min-width: 1000px) {
-    .flamingo,
+    .computersquare,
     .right-hero-square,
     .fern,
     .center-hero-square,
@@ -254,7 +251,7 @@ header {
     .hero-container h1 {
         margin-top: 28vh;
     }
-    .flamingo {
+    .computersquare {
         top: 90px;
     }
     .right-hero-square {
