--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@ html {
 /* Typography ----------------------------------- */
 
 body {
+    min-width: 360px;
     font-family: "Inconsolata", "Helvetica Neue", sans-serif;
 }
 
@@ -52,9 +53,12 @@ i {
 .hero-container h1 {
     opacity: 0;
     font-size: 40px;
-    padding: 60px 8px 4px 8px;
+    padding: 8% 8px 4px 8px;
     animation: fadeIn 2s forwards;
     animation-delay: 0.1s;
+    display: inline-block;
+    position: relative;
+    z-index: 2;
 }
 
 .hero-paragraph {
@@ -112,29 +116,43 @@ i {
     overflow-x: hidden;
 }
 
+header a {
+    font-size: 14px;
+}
+
 header {
+    font-size: 14px;
     opacity: 0;
-    padding: 50px 0 0 0;
     animation: fadeIn 1s forwards;
+    max-width: 1100px;
+    margin: auto;
+    width: 100%;
+    padding: 30px 50px;
 }
 
 header p {
-    display: inline-block;
+    float: right;
+}
+
+header div:first-of-type {
     float: left;
-    font-size: 16px;
+    text-align: left;
 }
 
 header a {
-    float: right;
+    text-decoration: underline;
+}
+
+@media(min-width: 550px) {
+    header,
+    header a {
+        font-size: 16px;
+    }
 }
 
 @media (min-width: 1000px) {
     header {
-        padding: 50px 70px;
-    }
-    header p {
-        text-align: left;
-        animation: fadeInSlideLeft 5s forwards;
+        padding: 50px 20px;
     }
     header a {
         animation: fadeInSlideRight 5s forwards;
@@ -146,7 +164,7 @@ header a {
     display: inline-block;
     width: 378px;
     height: 310px;
-    padding: 30px 40px;
+    padding: 35px 0 0 50px;
     line-height: 39px;
     font-family: "heading", "Helvectica Neue", serif;
     text-align: left;
@@ -155,7 +173,7 @@ header a {
     opacity: 0;
     position: absolute;
     margin: auto;
-    top: 35%;
+    top: 32%;
     right: 40%;
     left: 0;
     animation: fadeInSlideLeft 0.4s forwards;
@@ -167,7 +185,7 @@ header a {
     display: inline-block;
     position: absolute;
     margin: auto;
-    top: 13%;
+    top: 18%;
     right: -35%;
     left: 0;
     z-index: -2;
@@ -215,6 +233,11 @@ header a {
     .arrow-image {
         width: 30px;
     }
+    .fernsquare {
+        top: 18%;
+        right: -35%;
+        left: 0;
+    }
 }
 
 /*@media only screen and (-Webkit-min-device-pixel-ratio: 1.5),
@@ -228,7 +251,8 @@ only screen and (min-device-pixel-ratio: 1.5) {
     font-family: "heading", "Helvectica Neue", serif;
     font-size: 25px;
     margin: 80px auto 150px auto;
-    max-width: 900px;
+    line-height: 52px;
+    max-width: 1100px;
     padding: 0 20px;
     display: block;
     width: 100%;
@@ -257,7 +281,7 @@ only screen and (min-device-pixel-ratio: 1.5) {
     font-size: 14px;
     margin: 0 auto;
     padding: 40px 20px;
-    max-width: 900px;
+    max-width: 1100px;
     list-style: none;
 }
 
@@ -323,8 +347,6 @@ only screen and (min-device-pixel-ratio: 1.5) {
 
 footer {
     display: block;
-    height: 203px;
-    position: relative;
     animation: fadeIn 1.5s forwards;
     font-size: 14px;
 }
@@ -393,7 +415,7 @@ footer li {
 }
 
 .footer-text-container {
-    max-width: 900px;
+    max-width: 1100px;
     position: relative;
     bottom: 30px;
     padding: 40px 50px;
@@ -415,6 +437,7 @@ footer li {
 }
 
 .footer-mailto {
+    text-decoration: underline;
     text-align: center;
     position: static;
     top: 0;
@@ -439,16 +462,13 @@ footer li {
 }
 
 @media (min-width: 550px) {
-    footer {
-        margin-top: 200px;
-    }
     .footer-left-rectangle,
     .footer-right-rectangle {
         display: inline-block;;
     }
     .footer-text-container {
         overflow: auto;
-        margin: 0 auto 30px auto;
+        margin: 0 auto 0 auto;
     }
     .footer-text-container h1 {
         display: none;
@@ -477,7 +497,6 @@ footer li {
 
 @media (min-width: 1000px) {
     .footer-text-container {
-        bottom: 300px;
         padding: 40px 20px;
     }
 }
