--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,8 @@ html {
 /* Typography ----------------------------------- */
 
 body {
-    min-width: 360px;
+    overflow-x: hidden;
+    background-color: #fff;
     font-family: "Inconsolata", "Helvetica Neue", sans-serif;
 }
 
@@ -120,6 +121,10 @@ header a {
     font-size: 14px;
 }
 
+header p {
+    margin-top: 10px;
+}
+
 header {
     font-size: 14px;
     opacity: 0;
@@ -130,15 +135,6 @@ header {
     padding: 30px 50px;
 }
 
-header p {
-    float: right;
-}
-
-header div:first-of-type {
-    float: left;
-    text-align: left;
-}
-
 header a {
     text-decoration: underline;
 }
@@ -147,6 +143,14 @@ header a {
     header,
     header a {
         font-size: 16px;
+    }
+    header p {
+        float: right;
+        margin-top: 0;
+    }
+    header div:first-of-type {
+        float: left;
+        text-align: left;
     }
 }
 
@@ -162,45 +166,56 @@ header a {
 /* Hero Images ----------------------------------- */
 .skillzsqaure {
     display: inline-block;
-    width: 378px;
-    height: 310px;
-    padding: 35px 0 0 50px;
-    line-height: 39px;
+    font-size: 18px;
+    width: 280px;
+    height: 230px;
+    padding: 20px 0 0 15px;
+    line-height: 29px;
     font-family: "heading", "Helvectica Neue", serif;
     text-align: left;
-    font-size: 25px;
+    /*background-color: rgba(255,255,255,0);*/
     background-color: #F2FFFF;
     opacity: 0;
     position: absolute;
     margin: auto;
-    top: 32%;
+    top: 43%;
     right: 40%;
-    left: 0;
+    left: -2%;
     animation: fadeInSlideLeft 0.4s forwards;
     animation-delay: 0.3s;
 }
 
-.fernsquare {
+.fernsquare,
+.fernsquare-orange {
+    max-width: 270px;
     opacity: 0;
-    display: inline-block;
     position: absolute;
     margin: auto;
-    top: 18%;
-    right: -35%;
+    top: 30%;
+    right: -10px;
     left: 0;
     z-index: -2;
     animation: fadeInSlideLeft 0.8s forwards;
     animation-delay: 0.6s;
 }
 
-.computersquare {
-    opacity: 0;
+.fernsquare {
+    display: none;
+}
+
+.fernsquare-orange {
     display: inline-block;
+}
+
+.computersquare {
+    max-width: 270px;
+    opacity: 0;
+    display: none;
     position: absolute;
     margin: auto;
-    left: 10%;
+    left: 2%;
     right: 0;
-    top: 38%;
+    top: 40%;
     z-index: -1;
     animation: fadeInSlideRight 0.8s forwards;
     animation-delay: 0.6s;
@@ -212,7 +227,7 @@ header a {
     opacity: 0;
     animation: fadeInSlideDown 1s forwards;
     animation-delay: 0.7s;
-    top: 36%;
+    top: 50%;
 }
 
 .arrow-image {
@@ -220,18 +235,44 @@ header a {
     animation: slideUpAndDown infinite 3s;
 }
 
-@media(min-width: 1000px) {
-    .computersquare,
-    .skillzsqaure,
-    .fernsquare {
-        display: inline-block !important;
+@media(min-width: 550px) {
+    .skillzsqaure {
+        left: 0;
+        width: 378px;
+        height: 310px;
+        font-size: 25px;
+        padding: 35px 0 0 50px;
+        line-height: 39px;
+        background-color: #F2FFFF;
     }
-    .hero-container figure {
-        left: 23%;
-        animation-delay: 2s;
+    .fernsquare {
+        top: 20%;
+        max-width: none;
+        right: -35%;
+        display: inline-block;
+    }
+    .fernsquare-orange {
+        display: none;
+    }
+    .computersquare {
+        top: 38%;
+        max-width: none;
+        display: inline-block;
+        left: 10%;
     }
     .arrow-image {
         width: 30px;
+    }
+    .hero-container figure {
+        top: 35%;
+        left: 28%;
+    }
+}
+
+@media(min-width: 1000px) {
+    .hero-container figure {
+        animation-delay: 2s;
+        left: 23%;
     }
     .fernsquare {
         top: 18%;
@@ -249,13 +290,22 @@ only screen and (min-device-pixel-ratio: 1.5) {
 
 .tldr {
     font-family: "heading", "Helvectica Neue", serif;
-    font-size: 25px;
-    margin: 80px auto 150px auto;
-    line-height: 52px;
+    font-size: 18px;
+    margin: 80px auto 80px auto;
+    line-height: 42px;
     max-width: 1100px;
-    padding: 0 20px;
+    padding: 0 30px;
     display: block;
     width: 100%;
+}
+
+@media (min-width: 550px) {
+    .tldr {
+        margin: 80px auto;
+        font-size: 25px;
+        line-height: 52px;
+        padding: 0 20px;
+    }
 }
 
 /* Work Section ----------------------------------- */
@@ -294,7 +344,7 @@ only screen and (min-device-pixel-ratio: 1.5) {
 }
 
 .work-items-container a:hover {
-    background-color: #EEE;
+    background-color: #F2FFFF;
     transition: 0.2s;
 }
 
@@ -418,7 +468,7 @@ footer li {
     max-width: 1100px;
     position: relative;
     bottom: 30px;
-    padding: 40px 50px;
+    padding: 40px 20px;
     margin: 0 auto 0 auto;
     animation: fadeIn 2s forwards;
 }
