--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,8 @@ html {
 /* Typography ----------------------------------- */
 
 body {
+    overflow-x: hidden;
+    background-color: #fff;
     font-family: "Inconsolata", "Helvetica Neue", sans-serif;
 }
 
@@ -52,12 +54,12 @@ i {
 .hero-container h1 {
     opacity: 0;
     font-size: 40px;
-    max-width: 300px;
-    display: inline-block;
-    padding: 0 8px 4px 8px;
-    margin-top: 100px;
+    padding: 8% 8px 4px 8px;
     animation: fadeIn 2s forwards;
     animation-delay: 0.1s;
+    display: inline-block;
+    position: relative;
+    z-index: 2;
 }
 
 .hero-paragraph {
@@ -78,7 +80,6 @@ i {
     }
     .hero-container h1 {
         max-width: none;
-        margin-top: 21vh;
     }
 }
 
@@ -116,114 +117,117 @@ i {
     overflow-x: hidden;
 }
 
-header {
-    opacity: 0;
-    padding: 50px 0 0 0;
-    animation: fadeIn 1s forwards;
+header a {
+    font-size: 14px;
 }
 
-@media (min-width: 1000px) {
-    header {
-        padding: 50px 0 0 70px;
-        animation: fadeInSlideLeft 5s forwards;
+header p {
+    margin-top: 10px;
+}
+
+header {
+    font-size: 14px;
+    opacity: 0;
+    animation: fadeIn 1s forwards;
+    max-width: 1100px;
+    margin: auto;
+    width: 100%;
+    padding: 30px 50px;
+}
+
+header a {
+    text-decoration: underline;
+}
+
+@media(min-width: 550px) {
+    header,
+    header a {
+        font-size: 16px;
     }
     header p {
+        float: right;
+        margin-top: 0;
+    }
+    header div:first-of-type {
+        float: left;
         text-align: left;
     }
 }
 
+@media (min-width: 1000px) {
+    header {
+        padding: 50px 20px;
+    }
+    header a {
+        animation: fadeInSlideRight 5s forwards;
+    }
+}
+
 /* Hero Images ----------------------------------- */
-
-.hero-left-rectangle {
-    background-color: #CAE6E0;
-    position: absolute;
-    top: 0;
-    left: -20px;
-    height: 100vh;
-    width: 50vw;
-    z-index: -99;
-    display: none;
-    animation: slideLeft 2s forwards;
-}
-
-.left-hero-square {
-    width: 300px;
+.skillzsqaure {
+    display: inline-block;
+    font-size: 18px;
+    width: 280px;
+    height: 230px;
+    padding: 20px 0 0 15px;
+    line-height: 29px;
+    font-family: "heading", "Helvectica Neue", serif;
+    text-align: left;
+    /*background-color: rgba(255,255,255,0);*/
+    background-color: #F2FFFF;
     opacity: 0;
     position: absolute;
     margin: auto;
-    top: 0;
-    bottom: 0;
-    right: 780px;
-    left: 0;
-    z-index: -1;
-    display: none;
+    top: 43%;
+    right: 40%;
+    left: -2%;
     animation: fadeInSlideLeft 0.4s forwards;
-    animation-delay: 0.8s;
-}
-
-.fern,
-.center-hero-square {
-    opacity: 0;
-    position: absolute;
-    margin: auto;
-    top: 260px;
-    bottom: 0;
-    right: 160px;
-    left: 0;
-    z-index: -1;
-    display: none;
-    animation: fadeInSlideLeft 0.8s forwards;
-    animation-delay: 1s;
-}
-
-.center-hero-square {
-    width: 300px;
-    top: 360px;
-    right: 410px;
-    animation-delay: 0.5s;
-}
-
-.flamingo,
-.right-hero-square {
-    width: 250px;
-    opacity: 0;
-    position: absolute;
-    margin: auto;
-    top: 30px;
-    right: -530px;
-    left: 0;
-    z-index: -1;
-    display: none;
-    animation: fadeInSlideRight 0.8s forwards;
-    animation-delay: 1s;
-}
-
-.right-hero-square {
-    width: 300px;
-    top: 190px;
-    right: -740px;
-    animation-delay: 0.5s;
-}
-
-.lamp {
-    opacity: 0;
-    max-width: 230px;
-    position: absolute;
-    margin: auto;
-    top: -120px;
-    left: 0;
-    right: 0;
-    display: none;
-    animation: fadeInSlideDown 1.5s forwards;
     animation-delay: 0.3s;
 }
 
+.fernsquare,
+.fernsquare-orange {
+    max-width: 270px;
+    opacity: 0;
+    position: absolute;
+    margin: auto;
+    top: 30%;
+    right: -10px;
+    left: 0;
+    z-index: -2;
+    animation: fadeInSlideLeft 0.8s forwards;
+    animation-delay: 0.6s;
+}
+
+.fernsquare {
+    display: none;
+}
+
+.fernsquare-orange {
+    display: inline-block;
+}
+
+.computersquare {
+    max-width: 270px;
+    opacity: 0;
+    display: none;
+    position: absolute;
+    margin: auto;
+    left: 2%;
+    right: 0;
+    top: 40%;
+    z-index: -1;
+    animation: fadeInSlideRight 0.8s forwards;
+    animation-delay: 0.6s;
+}
+
+/*arrow container*/
 .hero-container figure {
     position: relative;
     opacity: 0;
     animation: fadeInSlideDown 1s forwards;
-    animation-delay: 1.2s;
-    bottom: 30px;
+    animation-delay: 0.7s;
+    top: 50%;
 }
 
 .arrow-image {
@@ -231,37 +235,49 @@ header {
     animation: slideUpAndDown infinite 3s;
 }
 
-@media(min-width: 1000px) {
-    .flamingo,
-    .right-hero-square,
-    .fern,
-    .center-hero-square,
-    .left-hero-square,
-    .hero-left-rectangle {
-        display: inline-block !important;
+@media(min-width: 550px) {
+    .skillzsqaure {
+        left: 0;
+        width: 378px;
+        height: 310px;
+        font-size: 25px;
+        padding: 35px 0 0 50px;
+        line-height: 39px;
+        background-color: #F2FFFF;
     }
-    .hero-container figure {
-        top: 30px;
-        left: 185px;
-        animation-delay: 2s;
+    .fernsquare {
+        top: 20%;
+        max-width: none;
+        right: -35%;
+        display: inline-block;
+    }
+    .fernsquare-orange {
+        display: none;
+    }
+    .computersquare {
+        top: 38%;
+        max-width: none;
+        display: inline-block;
+        left: 10%;
     }
     .arrow-image {
         width: 30px;
     }
+    .hero-container figure {
+        top: 35%;
+        left: 28%;
+    }
 }
 
-@media (min-height: 815px) {
-    .hero-container h1 {
-        margin-top: 28vh;
+@media(min-width: 1000px) {
+    .hero-container figure {
+        animation-delay: 2s;
+        left: 23%;
     }
-    .flamingo {
-        top: 90px;
-    }
-    .right-hero-square {
-        top: 270px;
-    }
-    .lamp {
-        top: -70px;
+    .fernsquare {
+        top: 18%;
+        right: -35%;
+        left: 0;
     }
 }
 
@@ -272,13 +288,32 @@ only screen and (min-device-pixel-ratio: 1.5) {
 
 }*/
 
+.tldr {
+    font-family: "heading", "Helvectica Neue", serif;
+    font-size: 18px;
+    margin: 50px auto 80px auto;
+    line-height: 42px;
+    max-width: 1100px;
+    padding: 0 30px;
+    display: block;
+    width: 100%;
+}
+
+@media (min-width: 550px) {
+    .tldr {
+        margin: 80px auto;
+        font-size: 25px;
+        line-height: 52px;
+        padding: 0 20px;
+    }
+}
+
 /* Work Section ----------------------------------- */
 .work-items-container {
     animation: fadeIn 1.5s forwards;
 }
 
 .work-items-container h1 {
-    padding-top: 100px;
     padding-bottom: 35px;
     text-align: center;
 }
@@ -296,7 +331,7 @@ only screen and (min-device-pixel-ratio: 1.5) {
     font-size: 14px;
     margin: 0 auto;
     padding: 40px 20px;
-    max-width: 900px;
+    max-width: 1100px;
     list-style: none;
 }
 
@@ -309,7 +344,7 @@ only screen and (min-device-pixel-ratio: 1.5) {
 }
 
 .work-items-container a:hover {
-    background-color: #EEE;
+    background-color: #F2FFFF;
     transition: 0.2s;
 }
 
@@ -362,8 +397,6 @@ only screen and (min-device-pixel-ratio: 1.5) {
 
 footer {
     display: block;
-    height: 203px;
-    position: relative;
     animation: fadeIn 1.5s forwards;
     font-size: 14px;
 }
@@ -432,10 +465,10 @@ footer li {
 }
 
 .footer-text-container {
-    max-width: 900px;
+    max-width: 1100px;
     position: relative;
     bottom: 30px;
-    padding: 40px 50px;
+    padding: 40px 20px;
     margin: 0 auto 0 auto;
     animation: fadeIn 2s forwards;
 }
@@ -454,6 +487,7 @@ footer li {
 }
 
 .footer-mailto {
+    text-decoration: underline;
     text-align: center;
     position: static;
     top: 0;
@@ -478,16 +512,13 @@ footer li {
 }
 
 @media (min-width: 550px) {
-    footer {
-        margin-top: 200px;
-    }
     .footer-left-rectangle,
     .footer-right-rectangle {
         display: inline-block;;
     }
     .footer-text-container {
         overflow: auto;
-        margin: 0 auto 30px auto;
+        margin: 0 auto 0 auto;
     }
     .footer-text-container h1 {
         display: none;
@@ -516,7 +547,6 @@ footer li {
 
 @media (min-width: 1000px) {
     .footer-text-container {
-        bottom: 300px;
         padding: 40px 20px;
     }
 }
