--- a/css/main.css
+++ b/css/main.css
@@ -53,33 +53,20 @@ i {
 
 .hero-container h1 {
     opacity: 0;
+    pointer-events: none;
     font-size: 40px;
-    padding: 8% 8px 4px 8px;
+    padding: 13% 8px 4px 8px;
     animation: fadeIn 2s forwards;
     animation-delay: 0.1s;
     display: inline-block;
     position: relative;
-    z-index: 2;
+    z-index: 20;
 }
 
-.hero-paragraph {
-    opacity: 0;
-    font-size: 15px;
-    display: block;
-    line-height: 1.9;
-    margin: 40px auto;
-    max-width: 310px;
-    padding: 3px 0 3px 8px;
-    animation: fadeIn 0.8s forwards;
-    animation-delay: 0.5s;
-}
-
-@media (min-width: 500px) {
-    .hero-paragraph {
-        max-width: 450px;
-    }
+@media (min-width: 550px) {
     .hero-container h1 {
         max-width: none;
+        padding: 13% 8px 4px 8px;
     }
 }
 
@@ -115,6 +102,7 @@ i {
     height: 100vh;
     text-align: center;
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 header a {
@@ -164,59 +152,91 @@ header a {
 }
 
 /* Hero Images ----------------------------------- */
+.square-container {
+    max-width: 410px;
+    width: 100%;
+    height: 410px;
+    position: relative;
+    margin: auto;
+    padding-top: 130px;
+}
+.square-container img {
+    max-width: 320px;
+}
+.square-container * {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none;   /* Chrome/Safari/Opera */
+  -khtml-user-select: none;    /* Konqueror */
+  -moz-user-select: none;      /* Firefox */
+  -ms-user-select: none;       /* Internet Explorer/Edge */
+  user-select: none;
+}
+.skillzsqaure,
+.computersquare,
+.fernsquare,
+.fernsquare-orange {
+    position: absolute;
+}
+.square-container-computer,
+.square-container-list,
+.square-container-fern {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+.square-container-list {
+    padding-left: 65%;
+    max-width: none;
+    transform: translate3d(-65%,8%,0);
+    z-index: 3;
+    -webkit-font-smoothing: antialiased;
+}
+.square-container-computer {
+    transform: translate3d(10%,-4%,0);
+    z-index: 2;
+}
+.square-container-fern {
+    transform: translate3d(54%,-40%,0);
+    z-index: 1;
+}
 .skillzsqaure {
-    display: inline-block;
-    font-size: 18px;
-    width: 280px;
-    height: 230px;
-    padding: 20px 0 0 15px;
+    font-size: 20px;
+    width: 300px;
+    height: 250px;
+    padding: 30px 0 0 25px;
     line-height: 29px;
     font-family: "heading", "Helvectica Neue", serif;
     text-align: left;
-    /*background-color: rgba(255,255,255,0);*/
-    background-color: #F2FFFF;
     opacity: 0;
-    position: absolute;
-    margin: auto;
-    top: 43%;
-    right: 40%;
-    left: -2%;
     animation: fadeInSlideLeft 0.4s forwards;
     animation-delay: 0.3s;
 }
 
 .fernsquare,
 .fernsquare-orange {
-    max-width: 270px;
+    max-width: 320px;
     opacity: 0;
-    position: absolute;
-    margin: auto;
-    top: 30%;
-    right: -10px;
-    left: 0;
     z-index: -2;
     animation: fadeInSlideLeft 0.8s forwards;
     animation-delay: 0.6s;
 }
-
+.drag {
+    cursor: grab;
+}
 .fernsquare {
     display: none;
 }
 
 .fernsquare-orange {
-    display: inline-block;
+    display: block;
 }
 
 .computersquare {
     max-width: 270px;
     opacity: 0;
     display: none;
-    position: absolute;
-    margin: auto;
-    left: 2%;
-    right: 0;
-    top: 40%;
     z-index: -1;
+    transform: translate3d(20%,-4%,0);
     animation: fadeInSlideRight 0.8s forwards;
     animation-delay: 0.6s;
 }
@@ -224,12 +244,20 @@ header a {
 /*arrow container*/
 .hero-container figure {
     position: relative;
+    z-index: 10;
     opacity: 0;
     animation: fadeInSlideDown 1s forwards;
     animation-delay: 0.7s;
-    top: 50%;
+    display: none;
+    padding: 100px 0 0 300px;
 }
-
+.arrow-image-holder {
+    text-align: left;
+    max-width: 410px;
+    width: 100%;
+    margin: auto;
+    transform: translate3d(120%,-260%,0);
+}
 .arrow-image {
     width: 20px;
     animation: slideUpAndDown infinite 3s;
@@ -237,7 +265,6 @@ header a {
 
 @media(min-width: 550px) {
     .skillzsqaure {
-        left: 0;
         width: 378px;
         height: 310px;
         font-size: 25px;
@@ -246,38 +273,46 @@ header a {
         background-color: #F2FFFF;
     }
     .fernsquare {
-        top: 20%;
         max-width: none;
-        right: -35%;
-        display: inline-block;
+        display: block;
     }
     .fernsquare-orange {
         display: none;
     }
     .computersquare {
-        top: 38%;
         max-width: none;
-        display: inline-block;
-        left: 10%;
+        display: block;
     }
     .arrow-image {
         width: 30px;
     }
     .hero-container figure {
-        top: 35%;
-        left: 28%;
+        display: block;
+    }
+}
+
+@media(min-width: 750px) {
+    .square-container-list {
+        padding-left: 0;
+    }
+    .square-container img {
+        max-width: none;
+    }
+    .square-container {
+        padding-top: 90px;
+    }
+    .hero-container figure {
+        animation-delay: 2s;
+        padding: 0;
     }
 }
 
 @media(min-width: 1000px) {
     .hero-container figure {
         animation-delay: 2s;
-        left: 23%;
     }
-    .fernsquare {
-        top: 18%;
-        right: -35%;
-        left: 0;
+    .square-container {
+        padding-top: 0;
     }
 }
 
