--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,10 @@ i {
     .hero-paragraph {
         max-width: 500px;
     }
+    .hero-container h1 {
+        max-width: none;
+        padding: 10% 8px 4px 8px;
+    }
 }
 
 @media (min-width: 1000px) {
@@ -90,6 +94,10 @@ i {
     .hero-paragraph {
         max-width: 310px;
     }
+    .hero-container h1 {
+        max-width: none;
+        padding: 8% 8px 4px 8px;
+    }
 }
 
 /* Layout ----------------------------------- */
@@ -99,10 +107,8 @@ i {
 }
 
 .hero-container {
-    height: 100vh;
+    min-height: 100vh;
     text-align: center;
-    overflow-x: hidden;
-    overflow-y: hidden;
 }
 
 header a {
@@ -158,7 +164,7 @@ header a {
     height: 410px;
     position: relative;
     margin: auto;
-    padding-top: 130px;
+    padding-top: 30px;
 }
 .square-container img {
     max-width: 320px;
@@ -177,6 +183,7 @@ header a {
 .fernsquare-orange {
     position: absolute;
 }
+
 .square-container-computer,
 .square-container-list,
 .square-container-fern {
@@ -184,44 +191,45 @@ header a {
     height: 100%;
     position: absolute;
 }
+
 .square-container-list {
-    padding-left: 65%;
+    padding-left: 62%;
     max-width: none;
     transform: translate3d(-65%,8%,0);
     z-index: 3;
     -webkit-font-smoothing: antialiased;
 }
+
 .square-container-computer {
     transform: translate3d(10%,-4%,0);
     z-index: 2;
 }
+
 .square-container-fern {
     transform: translate3d(54%,-40%,0);
     z-index: 1;
 }
+
 .skillzsqaure {
     font-size: 20px;
-    width: 300px;
-    height: 250px;
-    padding: 30px 0 0 25px;
+    width: 270px;
+    height: 240px;
+    padding: 25px 0 0 25px;
     line-height: 29px;
     font-family: "heading", "Helvectica Neue", serif;
     text-align: left;
     opacity: 0;
     animation: fadeInSlideLeft 0.4s forwards;
     animation-delay: 0.3s;
+    background-color: #F2FFFF;
 }
 
 .fernsquare,
 .fernsquare-orange {
-    max-width: 320px;
     opacity: 0;
     z-index: -2;
     animation: fadeInSlideLeft 0.8s forwards;
     animation-delay: 0.6s;
-}
-.drag {
-    cursor: grab;
 }
 .fernsquare {
     display: none;
@@ -229,6 +237,7 @@ header a {
 
 .fernsquare-orange {
     display: block;
+    margin-left: 100px;
 }
 
 .computersquare {
@@ -248,7 +257,6 @@ header a {
     opacity: 0;
     animation: fadeInSlideDown 1s forwards;
     animation-delay: 0.7s;
-    display: none;
     padding: 100px 0 0 300px;
 }
 .arrow-image-holder {
@@ -263,14 +271,13 @@ header a {
     animation: slideUpAndDown infinite 3s;
 }
 
-@media(min-width: 550px) {
+@media (min-width: 550px) {
     .skillzsqaure {
         width: 378px;
         height: 310px;
         font-size: 25px;
         padding: 35px 0 0 50px;
         line-height: 39px;
-        background-color: #F2FFFF;
     }
     .fernsquare {
         max-width: none;
@@ -286,20 +293,26 @@ header a {
     .arrow-image {
         width: 30px;
     }
-    .hero-container figure {
-        display: block;
+    .square-container-list {
+        padding-left: 30%;
+    }
+}
+
+@media (min-width: 550px) {
+    .square-container {
+        padding-top: 110px;
     }
 }
 
 @media(min-width: 750px) {
     .square-container-list {
-        padding-left: 0;
+        padding-left: 15%;
     }
     .square-container img {
         max-width: none;
     }
     .square-container {
-        padding-top: 90px;
+        padding-top: 100px;
     }
     .hero-container figure {
         animation-delay: 2s;
@@ -312,7 +325,7 @@ header a {
         animation-delay: 2s;
     }
     .square-container {
-        padding-top: 0;
+        padding-top: 30px;
     }
 }
 
@@ -326,12 +339,13 @@ only screen and (min-device-pixel-ratio: 1.5) {
 .tldr {
     font-family: "heading", "Helvectica Neue", serif;
     font-size: 18px;
-    margin: 50px auto 80px auto;
+    margin: 42px auto 80px auto;
     line-height: 42px;
     max-width: 1100px;
     padding: 0 30px;
     display: block;
     width: 100%;
+    z-index: 4;
 }
 
 @media (min-width: 550px) {
