--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,12 @@ i {
     position: relative;
     z-index: 20;
 }
+.ui-draggable {
+    cursor: -webkit-grab;
+}
+.ui-draggable-dragging {
+    cursor: -webkit-grabbing;
+}
 
 @media (min-width: 550px) {
     .hero-container h1 {
@@ -257,6 +263,7 @@ header a {
     opacity: 0;
     animation: fadeInSlideDown 1s forwards;
     animation-delay: 0.7s;
+    pointer-events: none;
     padding: 100px 0 0 300px;
 }
 .arrow-image-holder {
@@ -345,6 +352,7 @@ only screen and (min-device-pixel-ratio: 1.5) {
     padding: 0 30px;
     display: block;
     width: 100%;
+    position: relative;
     z-index: 4;
 }
 
@@ -445,9 +453,11 @@ only screen and (min-device-pixel-ratio: 1.5) {
 /* Footer ----------------------------------- */
 
 footer {
+    position: relative;
     display: block;
     animation: fadeIn 1.5s forwards;
     font-size: 14px;
+    z-index: 4;
 }
 
 footer li {
