--- a/css/main.css
+++ b/css/main.css
@@ -60,7 +60,7 @@ i {
     animation-delay: 0.1s;
     display: inline-block;
     position: relative;
-    z-index: 20;
+    z-index: 5;
 }
 .ui-draggable {
     cursor: -webkit-grab;
@@ -135,8 +135,6 @@ header {
     margin: auto;
     width: 100%;
     padding: 30px 50px;
-    z-index: 4;
-    position: relative;
 }
 
 @media(min-width: 550px) {
@@ -170,14 +168,21 @@ header {
 .square-container {
     max-width: 410px;
     width: 100%;
-    height: 410px;
     position: relative;
     margin: auto;
-    padding-top: 30px;
 }
+
+.fake-square {
+    height: 410px;
+    width: 100%;
+    z-index: -1000;
+    position: relative;
+}
+
 .square-container img {
     max-width: 320px;
 }
+
 .square-container * {
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none;   /* Chrome/Safari/Opera */
@@ -188,36 +193,73 @@ header {
 }
 .skillzsqaure,
 .computersquare,
-.fernsquare {
+.fernsquare,
+.fernsquare-mobile,
+.computer-mobile,
+.skillzsquare-mobile {
     position: absolute;
+}
+
+.square-container-fern-mobile {
+    top: -20px;
+    right: 50px;
+}
+
+.square-container-computer-mobile {
+    top: 290px;
+    right: -50px;
+}
+
+.square-container-list-mobile {
+    top: 30px;
+    z-index: 2;
+}
+
+.square-container-fern-mobile,
+.square-container-computer-mobile,
+.square-container-list-mobile {
+    max-width: 350px;
+}
+
+.square-container-fern,
+.square-container-computer,
+.square-container-list {
+    display: none;
 }
 
 .square-container-computer,
 .square-container-list,
-.square-container-fern {
+.square-container-fern,
+.square-container-fern-mobile,
+.square-container-computer-mobile,
+.square-container-list-mobile {
     width: 100%;
     height: 100%;
     position: absolute;
 }
 
 .square-container-list {
+    top: 60px;
+    right: 250px;
     padding-left: 62%;
     max-width: none;
-    transform: translate3d(-65%,8%,0);
     z-index: 3;
 }
 
 .square-container-computer {
-    transform: translate3d(10%,-4%,0);
+    top: 10px;
+    right: -40px;
     z-index: 2;
 }
 
 .square-container-fern {
-    transform: translate3d(-96%,-50%,0);
+    top: -80px;
+    right: -200px;
     z-index: 1;
 }
 
-.skillzsqaure {
+.skillzsqaure,
+.skillzsquare-mobile {
     font-size: 20px;
     -webkit-font-smoothing: antialiased;
     width: 270px;
@@ -239,7 +281,14 @@ header {
     animation-delay: 0.6s;
 }
 
-.computersquare {
+.fernsquare-mobile {
+    opacity: 0;
+    animation: fadeInSlideLeft 0.8s forwards;
+    animation-delay: 0.5s;
+}
+
+.computersquare,
+.computersquare-mobile {
     max-width: 270px;
     opacity: 0;
     z-index: -1;
@@ -248,6 +297,8 @@ header {
     animation-delay: 0.6s;
     padding: 0 0 20px 20px;
 }
+
+
 
 /*arrow container*/
 .hero-container figure {
@@ -272,6 +323,11 @@ header {
 }
 
 @media (min-width: 550px) {
+    .square-container-fern-mobile,
+    .square-container-computer-mobile,
+    .square-container-list-mobile {
+        display: none;
+    }
     .skillzsqaure {
         width: 410px;
         height: 410px;
@@ -290,11 +346,13 @@ header {
     .square-container-list {
         padding-left: 30%;
     }
-    .square-container {
+    .fake-square {
         padding-top: 110px;
     }
-    .square-container-fern {
-        transform: translate3d(54%,-40%,0);
+    .square-container-computer,
+    .square-container-fern,
+    .square-container-list {
+        display: block;
     }
 }
 
@@ -306,6 +364,8 @@ header {
         max-width: none;
     }
     .square-container {
+    }
+    .fake-square {
         padding-top: 100px;
     }
     .hero-container figure {
@@ -322,7 +382,7 @@ header {
     .hero-container figure {
         animation-delay: 2s;
     }
-    .square-container {
+    .fake-square {
         padding-top: 30px;
     }
     .arrow-image-holder {
@@ -438,22 +498,13 @@ header {
 /* Footer ----------------------------------- */
 
 footer {
-    position: relative;
     display: block;
     animation: fadeIn 1.5s forwards;
     font-size: 14px;
-    z-index: 4;
 }
 
 footer li {
     font-size: 14px;
-}
-
-.footer-image {
-    position: relative;
-    display: none;
-    z-index: 99;
-    bottom: -4px;
 }
 
 @media (min-width: 550px) {
