Make computer image smaller on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -183,6 +183,10 @@ header {
     max-width: 320px;
 }
 
+.square-container .square-container-computer-mobile img {
+    max-width: 290px;
+}
+
 .square-container * {
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none;   /* Chrome/Safari/Opera */
@@ -214,12 +218,6 @@ header {
     top: 30px;
     right: 50px;
     z-index: 2;
-}
-
-.square-container-fern-mobile,
-.square-container-computer-mobile,
-.square-container-list-mobile {
-    max-width: 350px;
 }
 
 .square-container-fern,
@@ -261,14 +259,7 @@ header {
 
 .skillzsqaure,
 .skillzsquare-mobile {
-    font-size: 20px;
-    -webkit-font-smoothing: antialiased;
-    width: 270px;
-    height: 240px;
-    line-height: 29px;
     padding: 20px 20px 0 0;
-    font-family: "heading", "Helvectica Neue", serif;
-    text-align: left;
     opacity: 0;
     animation: fadeInSlideLeft 0.4s forwards;
     animation-delay: 0.3s;
@@ -290,7 +281,6 @@ header {
 
 .computersquare,
 .computersquare-mobile {
-    max-width: 270px;
     opacity: 0;
     z-index: -1;
     transform: translate3d(20%,-4%,0);
