--- a/css/main.css
+++ b/css/main.css
@@ -120,6 +120,7 @@ i {
 }
 
 header a {
+    cursor: pointer;
     font-size: 14px;
 }
 
@@ -144,6 +145,9 @@ header {
     header,
     header a {
         font-size: 16px;
+    }
+    .volume-button {
+        float: right;
     }
     header p {
         float: right;
