--- a/css/main.css
+++ b/css/main.css
@@ -124,6 +124,10 @@ header a {
     font-size: 14px;
 }
 
+.volume-button {
+    display: none;
+}
+
 header p {
     margin-top: 10px;
 }
@@ -147,6 +151,7 @@ header {
         font-size: 16px;
     }
     .volume-button {
+        display: inline;
         float: right;
     }
     header p {
