--- a/css/main.css
+++ b/css/main.css
@@ -410,19 +410,24 @@ header {
 }
 
 .tldr {
-    font-size: 16px;
+    font-size: 14px;
     margin: 120px auto 80px auto;
-    line-height: 42px;
+    line-height: 40px;
     max-width: 1100px;
-    padding: 0 30px;
+    padding: 40px 30px 0 30px;
     display: block;
     width: 100%;
 }
 
+@media (min-width: 550px) {
+    .tldr {
+        font-size: 16px;
+    }
+}
+
 @media (min-width: 750px) {
     .tldr {
-        line-height: 52px;
-        padding: 0 20px;
+        padding: 0px 20px 0 20px;
     }
 }
 
