--- a/css/main.css
+++ b/css/main.css
@@ -223,6 +223,7 @@ header {
 .skillzsqaure,
 .computersquare,
 .fernsquare,
+.pinkfernsquare,
 .fernsquare-mobile,
 .computer-mobile,
 .skillzsquare-mobile {
@@ -246,14 +247,18 @@ header {
 }
 
 .square-container-fern,
+.square-container-pinkfern,
 .square-container-computer,
-.square-container-list {
+.square-container-list,
+.square-container-flamingo {
     display: none;
 }
 
 .square-container-computer,
 .square-container-list,
 .square-container-fern,
+.square-container-pinkfern,
+.square-container-flamingo,
 .square-container-fern-mobile,
 .square-container-computer-mobile,
 .square-container-list-mobile {
@@ -282,6 +287,18 @@ header {
     z-index: 1;
 }
 
+.square-container-pinkfern {
+    top: -80px;
+    right: -200px;
+    z-index: 0.5;
+}
+
+.square-container-flamingo {
+    top: 10px;
+    right: -20px;
+    z-index: 1;
+}
+
 .skillzsqaure,
 .skillzsquare-mobile {
     padding: 20px 20px 0 0;
@@ -292,6 +309,13 @@ header {
 }
 
 .fernsquare {
+    opacity: 0;
+    z-index: -2;
+    animation: fadeInSlideLeft 0.8s forwards;
+    animation-delay: 0.6s;
+}
+
+.flamingosquare {
     opacity: 0;
     z-index: -2;
     animation: fadeInSlideLeft 0.8s forwards;
@@ -330,10 +354,6 @@ header {
     margin: auto;
     display: none;
 }
-.arrow-image {
-    width: 20px;
-    animation: slideUpAndDown infinite 3s;
-}
 
 @media (min-width: 550px) {
     .square-container-fern-mobile,
@@ -353,6 +373,14 @@ header {
         max-width: none;
         display: block;
     }
+    .flamaingosquare {
+        max-width: none;
+        display: block;
+    }
+    .pinkfernsquare {
+        max-width: none;
+        display: block;
+    }
     .arrow-image {
         width: 30px;
     }
@@ -364,7 +392,9 @@ header {
     }
     .square-container-computer,
     .square-container-fern,
-    .square-container-list {
+    .square-container-pinkfern,
+    .square-container-list,
+    .square-container-flamingo {
         display: block;
     }
 }
@@ -409,12 +439,19 @@ header {
     }
 }
 
+.tldr-container {
+    overflow: auto;
+    max-width: 1100px;
+    margin: auto;
+}
+
 .tldr {
     font-size: 14px;
-    margin: 120px auto 80px auto;
+    float: left;
+    max-width: 500px;
+    margin: 80px auto 80px auto;
     line-height: 40px;
-    max-width: 1100px;
-    padding: 40px 30px 0 30px;
+    padding: 80px 30px 0 30px;
     display: block;
     width: 100%;
 }
