--- a/css/main.css
+++ b/css/main.css
@@ -299,27 +299,11 @@ header {
     z-index: 1;
 }
 
-.square-container-pinkfern {
-    top: -80px;
-    right: -200px;
-    z-index: 0.5;
-}
-
-.square-container-flamingo {
-    top: 10px;
-    right: -20px;
-    z-index: 1;
-}
-
-.square-container-tv {
-    top: 10px;
-    right: -20px;
-    z-index: 2;
-}
-
+.square-container-flamingo,
+.square-container-tv,
 .square-container-dolphin {
     top: 10px;
-    right: -20px;
+    right: -40px;
     z-index: 1;
 }
 
@@ -343,11 +327,11 @@ header {
 
 .flamingosquare,
 .tvsquare,
-.dolphinsquare, {
+.dolphinsquare {
     opacity: 0;
     z-index: -2;
-    animation: fadeInSlideLeft 0.8s forwards;
-    animation-delay: 0.6s;
+    animation: fadeIn 0.8s forwards;
+    animation-delay: 1.3s;
 }
 
 .fernsquare-mobile {
@@ -362,7 +346,7 @@ header {
     z-index: -1;
     transform: translate3d(20%,-4%,0);
     animation: fadeInSlideRight 0.8s forwards;
-    animation-delay: 0.6s;
+    animation-delay: 0.2s;
     padding: 0 0 20px 20px;
 }
 
@@ -392,7 +376,9 @@ header {
     .fernsquare,
     .computersquare,
     .flamaingosquare,
-    .pinkfernsquare, {
+    .pinkfernsquare,
+    .tvsquare,
+    .dolphinsquare {
         max-width: none;
         display: block;
     }
