--- a/css/main.css
+++ b/css/main.css
@@ -510,88 +510,51 @@ header {
 }
 
 /* Work Section ----------------------------------- */
-.work-items-container {
-    animation: fadeIn 1.5s forwards;
+.work-items h2 {
+    font-family: "heading", "Helvectica Neue", serif;
+    line-height: 60px;
 }
 
-.work-items-container h1 {
-    padding-bottom: 35px;
-    text-align: center;
+body .work-items {
+    margin-top: 100px;
 }
 
-.work-items-container ul {
-    margin-bottom: 100px;
+.work-items-section {
+    padding-bottom: 40px;
 }
 
-.work-items-container a {
-    display: block;
-    transition: 0.2s;
-}
-
-.work-items-container li {
-    font-size: 14px;
-    margin: 0 auto;
-    padding: 40px 20px;
-    max-width: 1100px;
-    list-style: none;
-}
-
-.work-items-container i {
-    float: none;
-    margin-left: 2px;
-    background-size: 15px;
-    width: 20px;
-    display: inline-block;
-}
-
-.work-items-container a:hover {
-    background-color: #F2FFFF;
-    transition: 0.2s;
-}
-
-.work-items-container span  {
-    display: block;
-    text-align: center;
-}
-
-.work-items-container li span:nth-child(2n) {
-    display: none;
-    position: relative;
-    top: 1px;
-    margin-left: 10px;
-    padding-right: 50px;
-    animation: slideLeftXsm 0.2s forwards;
-}
-
-.work-items-container li span:nth-child(3n) {
-    margin-top: 10px;
-}
-
-.work-items-container-second-span-hover {
-    display: none;
-    animation: slideLeft 0.8s forwards;
-}
-
-@media (min-width: 550px) {
-    .work-items-container li {
-        font-size: 16px;
-    }
-    .work-items-container-second-span-hover {
-        display: inline-block !important;
-    }
-    .work-items-container span  {
+@media (min-width: 750px) {
+    .work-items-section {
+        padding-left: 30px;
         display: inline-block;
+        width: calc(100%/3 - 40px);
     }
-    .work-items-container li span:nth-child(3n) {
+    .work-items-section:first-child {
+        padding-left: 0;
+    }
+    .work-items-section:nth-child(3n) {
         float: right;
     }
-    .work-items-container i {
-        float: right;
-        margin-left: 30px;
-    }
-    .work-items-container li span:nth-child(3n) {
-        margin-top: 0;
-    }
+}
+
+.work-items-section li {
+    line-height: 40px;
+}
+
+.work-items-section li a {
+    display: block;
+}
+
+.work-items-section li a i {
+    background-image: none;
+    display: inline;
+    position: inherit;
+    margin: 0;
+    float: none;
+}
+
+.work-items .jcura::before {
+    /*Image of Jcura documentation here*/
 }
 
 /* Footer ----------------------------------- */
@@ -613,7 +576,8 @@ footer li {
     }
 }
 
-.footer-text-container {
+.footer-text-container,
+.work-items {
     max-width: 1100px;
     position: relative;
     bottom: 30px;
